ISSUE:  Redmine #670  PURPOSE:  Transaaction Styles and Accessibility Checking  DESCRIPTION:   Wave web aim accesibility checker -- contrast fix.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -89,6 +89,7 @@ h5, .h5 {
 h6, .h6 {
 	font-size: .75rem
 }
+.btn-link,.helpText, a {color: #036ee0 !important;}
 #resultLink a {padding: .15em .25em; outline:0;}
 #resultLink a.hover, #resultLink a:hover {padding: .15em .25em; outline:0;}
 #resultLink a.focus, #resultLink a:focus {padding:.15em .25em;	outline: 0;	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);}
@@ -345,9 +346,9 @@ span.data-entry-addon {
 .jqx-grid-cell a.focus, .jqx-grid-cell a:focus {text-decoration: underline;	box-shadow: 0 0 0 0.02rem rgba(255, 255, 255, 0.5);
 	box-shadow: none;}
 .text-success {color:#1e5d16 !important;}
-.btn-link,.helpText {color:#2f6eb1 !important;}
-.btn-link,.helpText {color:#046aa2 !important;}
-.btn-link,.helpText, a {color: #036ee0 !important;}
+/*.btn-link,.helpText {color:#2f6eb1 !important;}
+.btn-link,.helpText {color:#046aa2 !important;}*/
+
 /************************
 *************************
 BELOW: SPECIMEN DETAIL STYLES 
